About Me changes

--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
         <a class="current_page" href="#">About</a>
         <a href="job_history.html">Position History</a>
     </div>
-  </nav>  
+  </nav>
+  <main>
+    <h1>About Me</h1>
+  </main>  
 </body>
 </html>
